limit-data-and-skip-previous-data

--- a/06_load_more_data_API/index.html
+++ b/06_load_more_data_API/index.html
@@ -69,6 +69,10 @@
         line-height: 1;
       }
       .prodcut-item-wrapper .prodcut-price {
+        margin-top: 5px;
+        padding: 5px 10px;
+        background-color: rgb(147, 147, 61);
+        color: rgb(0, 0, 0);
       }
       .load-btn:active {
         transform: translate(8px, 8px);
@@ -77,6 +81,9 @@
       .load-btn:hover {
         background-color: #fff;
         color: #333;
+      }
+      .load-btn:disabled{
+        text-decoration: line-through;
       }
       .load-btn {
         padding: 10px 25px;
