add-disabled-function

--- a/06_load_more_data_API/index.html
+++ b/06_load_more_data_API/index.html
@@ -84,6 +84,9 @@
       }
       .load-btn:disabled{
         text-decoration: line-through;
+        cursor: not-allowed;
+        box-shadow: none;
+
       }
       .load-btn {
         padding: 10px 25px;
