8-project-pop-up-box

--- a/03_star_Rating/index.html
+++ b/03_star_Rating/index.html
@@ -36,13 +36,13 @@
         }
         .fa-star::before{
             content: "\f005";
-            color: yellow;
+            /* color: yellow; */
             font-size: 50px;
         }
-        .fa-star-o::before{
+        /* .fa-star-o::before{
             content: "\f006";
             font-size: 50px;
-        }
+        } */
     </style>
 </head>
 <body>
@@ -56,9 +56,9 @@
         </div>
     </div>
     <!-- <script src="script.js"></script> -->
-    <!-- <script src="script_Optimized.js"></script> -->
+    <script src="script_Optimized.js"></script>
 
     <!-- for production ready code -->
-    <script src="./app.js"></script>
+    <!-- <script src="./app.js"></script> -->
 </body>
 </html>
