--- a/11_Category_selection/index.html
+++ b/11_Category_selection/index.html
@@ -14,6 +14,7 @@
       }
 
       body {
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
         position: relative;
         width: 100%;
         background-color: #333;
@@ -30,38 +31,36 @@
         padding: 10px;
       }
       .display-box{
-        width: 80%;
+        width: 100%;
         height: 100%;
         display: flex;
         align-items: center;
         flex-direction: column;
         gap: 30px;
-        padding: 10px;
+        padding:0 50px;
       }
-      .filter-button-wrapper{
+      .filter-button-wrapper,
+      .category-content{
         display: flex;
         align-items: center;
         justify-content: center;
         flex-wrap: wrap;
         gap: 10px;
       }
-      .category-content{
-        display: grid;
-        grid-template-columns: repeat(2,1fr);
-        gap: 10px;
-      }
       .category-btn, .card{
-        padding: 5px 10px;
+        padding: 10px 20px;
         background-color: purple;
         color: #fff;
         cursor: pointer;
         border: none;
         font-size: 1.2rem;
         letter-spacing: 1px;
-      }
-      .card{
+    }
+    .card{
+          padding: 20px 40px;
         background-color: yellow;
         color: #000;
+        font-weight: 500;
       }
       .hide{
         display: none;
@@ -70,7 +69,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>filter cards by category</h1>
+        <h1>Filter cards by category</h1>
         <div class="display-box">
             <div class="filter-button-wrapper"></div>
             <div class="category-content"></div>    
