--- a/02_project(color-gen)/index.html
+++ b/02_project(color-gen)/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <a href="./another_practice.html">Another Sample</a>
     <div class="random-color-generator-container">
-
       <div class="hex-color-box color-box">
         <div class="hex-value">#fff</div>
         <div class="btn hex-btn">Generate</div>
